# release-ops

./: .gitignore  AGENTS.md  README.md
.github/actions/prepare-cryptad/: action.yml
.github/actions/render-desktop/: action.yml
.github/actions/render-manifest/: action.yml
.github/actions/repack-payload/: action.yml
.github/scripts/: upsert_sha256_section.py
.github/workflows/: build-cryptad-flatpak.yml  build-cryptad-jar.yml  build-cryptad-linux-packages.yml  build-cryptad-macos.yml  build-cryptad-snap.yml  build-cryptad-windows.yml  release-cryptad-manager.yml
cryptad-v1/conf/: wrapper.conf
cryptad-v1/lib/: libwrapper-macosx-arm-64.dylib  libwrapper-macosx-universal-64.jnilib
desktop/: cryptad.desktop.template
flatpak/: cryptad.yaml.template  network.crypta.cryptad.metainfo.xml.template
snap/: snapcraft.yaml.template  snapshots.yaml
snap/gui/: crypta-launcher.desktop  cryptad-launcher.desktop  cryptad.desktop
update_releaser/: .gitignore  README.md  pyproject.toml
update_releaser/src/update_releaser/: __init__.py  changelog.py  cli.py  core_info.py  fcp_client.py  github.py  mapping.py  publish.py  release_url.py  state.py  verify.py  workflow.py
